--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:text="스마트출결"
+            android:textSize="40dp"
+            android:gravity="center" />
+
+        <EditText
+            android:id="@+id/id"
+            android:layout_width="250dp"
+            android:layout_height="40dp" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="250dp"
+            android:layout_height="40dp" />
+
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:text="로그인" />
+
+        <Button
+            android:id="@+id/joinButton"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:text="회원가입" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
