--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -5,15 +5,38 @@ android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/bg">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="<"
+                android:background="@color/bg"
+                android:textColor="@android:color/white"
+                android:textSize="15pt"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:background="@color/bg"
+                android:text="^_^"
+                android:textColor="@android:color/white"
+                android:textSize="15pt" />
+        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2020년도 1학기"
             android:textSize="10pt"
-            android:layout_marginTop="40dp"
+            android:textColor="@android:color/white"
             android:layout_gravity="center_horizontal"/>
 
         <TextView
@@ -21,14 +44,14 @@ android:layout_height="match_parent">
             android:layout_height="wrap_content"
             android:text="수업 목록"
             android:textSize="20pt"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
             android:layout_marginBottom="40dp"
             android:layout_gravity="center_horizontal"/>
-
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="20dp"/>
-
     </LinearLayout>
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp"/>
 </LinearLayout>
