--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,12 +22,16 @@
         <EditText
             android:id="@+id/id"
             android:layout_width="250dp"
-            android:layout_height="40dp" />
+            android:layout_height="40dp"
+            android:hint="학번을 입력하세요"
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="250dp"
-            android:layout_height="40dp" />
+            android:layout_height="40dp"
+            android:hint="초기 비밀번호를 입력하세요"
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/loginButton"
