UI: 마이페이지

--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -33,24 +33,33 @@
         </RelativeLayout>
 
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="10pt"
-            android:text="My Page"
-            android:layout_marginTop="40dp"
-            android:textColor="@android:color/white"
-            android:layout_gravity="center_horizontal"/>
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="마이페이지"
-            android:textSize="20pt"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:layout_marginBottom="40dp"
-            android:layout_gravity="center_horizontal"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="마이페이지"
+                android:textSize="20pt"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="My Page"
+                android:textSize="10pt"
+                android:textColor="@android:color/white"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:layout_margin="5dp"/>
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -69,7 +78,7 @@
             android:textColor="@android:color/black"
             android:textStyle="bold"
             android:gravity="center"
-            android:layout_marginTop="50dp"/>
+            android:layout_marginTop="40dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -168,7 +177,7 @@
             android:text="로그아웃"
             android:textSize="20dp"
             android:layout_gravity="center"
-            android:layout_marginTop="25dp">
+            android:layout_marginTop="30dp">
         </Button>
     </LinearLayout>
 </LinearLayout>
