--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@color/bg">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -21,7 +22,9 @@
                 android:text="back"
                 android:background="@color/bg"
                 android:textColor="@android:color/white"
-                android:textSize="15pt"/>
+                android:textSize="15pt"
+                android:fontFamily="@font/nanumsquare_light"
+                android:onClick="onClick"/>
 
             <Button
                 android:id="@+id/profile"
@@ -31,7 +34,9 @@
                 android:background="@color/bg"
                 android:text="^_^"
                 android:textColor="@android:color/white"
-                android:textSize="15pt" />
+                android:textSize="15pt"
+                android:fontFamily="@font/nanumsquare_light"
+                android:onClick="onClick"/>
         </RelativeLayout>
 
         <TextView
@@ -43,7 +48,8 @@
             android:textStyle="bold"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
         android:layout_width="wrap_content"
@@ -52,7 +58,8 @@
         android:textSize="10pt"
         android:textColor="@android:color/white"
         android:layout_gravity="right"
-        android:layout_margin="10dp"/>
+        android:layout_margin="10dp"
+        android:fontFamily="@font/nanumsquare_light"/>
 
     </LinearLayout>
 
@@ -80,20 +87,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20"
-                    android:textSize="8pt"/>
+                    android:textSize="8pt"
+                    android:fontFamily="@font/nanumsquare_light"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/text_percentage"
                     android:text="점 중에"
-                    android:textSize="8pt"/>
+                    android:textSize="8pt"
+                    android:fontFamily="@font/nanumsquare_light"/>
 
                 <Button
                     android:id="@+id/btn_edit"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
-                    android:text="/"/>
+                    android:text="/"
+                    android:onClick="onClick"/>
+
                 <TextView
                     android:id="@+id/score_attendance"
                     android:layout_width="wrap_content"
@@ -102,14 +114,17 @@
                     android:layout_margin="20dp"
                     android:text="19"
                     android:textSize="20pt"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:fontFamily="@font/nanumsquare_light"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/score_attendance"
                     android:layout_alignBottom="@id/score_attendance"
                     android:text="점"
-                    android:textSize="8pt"/>
+                    android:textSize="8pt"
+                    android:fontFamily="@font/nanumsquare_light"/>
 
             </RelativeLayout>
 
@@ -125,7 +140,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="F까지"
-                    android:textSize="8pt"/>
+                    android:textSize="8pt"
+                    android:fontFamily="@font/nanumsquare_light"/>
 
                 <TextView
                     android:id="@+id/score_untilF"
@@ -135,16 +151,20 @@
                     android:layout_margin="20dp"
                     android:text="8"
                     android:textSize="20pt"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:fontFamily="@font/nanumsquare_light"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/score_untilF"
                     android:layout_alignBottom="@id/score_untilF"
                     android:text="번"
-                    android:textSize="8pt"/>
+                    android:textSize="8pt"
+                    android:fontFamily="@font/nanumsquare_light"/>
 
             </RelativeLayout>
+
         </RelativeLayout>
 
         <LinearLayout
@@ -160,7 +180,8 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:text="date"
-                android:textSize="10pt"/>
+                android:textSize="10pt"
+                android:fontFamily="@font/nanumsquare_light"/>
 
             <TextView
                 android:id="@+id/checktime"
@@ -170,7 +191,8 @@
                 android:gravity="center_horizontal"
                 android:padding="10dp"
                 android:text="check time"
-                android:textSize="10pt"/>
+                android:textSize="10pt"
+                android:fontFamily="@font/nanumsquare_light"/>
 
             <TextView
                 android:id="@+id/state"
@@ -180,7 +202,9 @@
                 android:gravity="right"
                 android:padding="10dp"
                 android:text="state"
-                android:textSize="10pt"/>
+                android:textSize="10pt"
+                android:fontFamily="@font/nanumsquare_light"/>
+
         </LinearLayout>
 
         <ListView
@@ -189,6 +213,7 @@
             android:layout_height="wrap_content">
 
         </ListView>
+
     </LinearLayout>
 
 </LinearLayout>
