UI:모든 화면 back, profile 버튼 온클릭 구현

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -25,7 +25,8 @@
                     android:background="@color/bg"
                     android:text="back"
                     android:textColor="@android:color/white"
-                    android:textSize="15pt" />
+                    android:textSize="15pt"
+                    android:onClick="onClick"/>
 
                 <Button
                     android:id="@+id/profile"
@@ -35,7 +36,8 @@
                     android:background="@color/bg"
                     android:text="^_^"
                     android:textColor="@android:color/white"
-                    android:textSize="15pt" />
+                    android:textSize="15pt"
+                    android:onClick="onClick"/>
             </RelativeLayout>
 
             <LinearLayout
