--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -15,21 +15,15 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="back"
                 android:textColor="@android:color/white"
                 android:textSize="15pt"
-                android:background="@color/bg"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
                 android:background="@color/bg"
-                android:text="^_^"
-                android:textColor="@android:color/white"
-                android:textSize="15pt" />
+                android:onClick="onClick"/>
+
         </RelativeLayout>
 
 
