UI: 폰트 전체 변경

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -21,7 +21,8 @@
                 android:text="back"
                 android:background="@color/bg"
                 android:textColor="@android:color/white"
-                android:textSize="15pt"/>
+                android:textSize="15pt"
+                android:fontFamily="@font/nanumsquare_light"/>
 
             <Button
                 android:id="@+id/profile"
@@ -31,7 +32,8 @@
                 android:background="@color/bg"
                 android:text="^_^"
                 android:textColor="@android:color/white"
-                android:textSize="15pt" />
+                android:textSize="15pt"
+                android:fontFamily="@font/nanumsquare_light"/>
         </RelativeLayout>
 
         <TextView
@@ -43,16 +45,18 @@
             android:textStyle="bold"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="001분반"
-        android:textSize="10pt"
-        android:textColor="@android:color/white"
-        android:layout_gravity="right"
-        android:layout_margin="10dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="001분반"
+            android:textSize="10pt"
+            android:textColor="@android:color/white"
+            android:layout_gravity="right"
+            android:layout_margin="10dp"
+            android:fontFamily="@font/nanumsquare_light"/>
 
     </LinearLayout>
 
@@ -80,20 +84,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20"
-                    android:textSize="8pt"/>
+                    android:textSize="8pt"
+                    android:fontFamily="@font/nanumsquare_light"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/text_percentage"
                     android:text="점 중에"
-                    android:textSize="8pt"/>
+                    android:textSize="8pt"
+                    android:fontFamily="@font/nanumsquare_light"/>
 
                 <Button
                     android:id="@+id/btn_edit"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
-                    android:text="/"/>
+                    android:text="/"
+                    android:fontFamily="@font/nanumsquare_light"/>
                 <TextView
                     android:id="@+id/score_attendance"
                     android:layout_width="wrap_content"
@@ -102,14 +109,16 @@
                     android:layout_margin="20dp"
                     android:text="19"
                     android:textSize="20pt"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:fontFamily="@font/nanumsquare_light"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/score_attendance"
                     android:layout_alignBottom="@id/score_attendance"
                     android:text="점"
-                    android:textSize="8pt"/>
+                    android:textSize="8pt"
+                    android:fontFamily="@font/nanumsquare_light"/>
 
             </RelativeLayout>
 
@@ -125,7 +134,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="F까지"
-                    android:textSize="8pt"/>
+                    android:textSize="8pt"
+                    android:fontFamily="@font/nanumsquare_light"/>
 
                 <TextView
                     android:id="@+id/score_untilF"
@@ -135,14 +145,16 @@
                     android:layout_margin="20dp"
                     android:text="8"
                     android:textSize="20pt"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:fontFamily="@font/nanumsquare_light"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/score_untilF"
                     android:layout_alignBottom="@id/score_untilF"
                     android:text="번"
-                    android:textSize="8pt"/>
+                    android:textSize="8pt"
+                    android:fontFamily="@font/nanumsquare_light"/>
 
             </RelativeLayout>
         </RelativeLayout>
@@ -160,7 +172,8 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:text="date"
-                android:textSize="10pt"/>
+                android:textSize="10pt"
+                android:fontFamily="@font/nanumsquare_light"/>
 
             <TextView
                 android:id="@+id/checktime"
@@ -170,7 +183,8 @@
                 android:gravity="center_horizontal"
                 android:padding="10dp"
                 android:text="check time"
-                android:textSize="10pt"/>
+                android:textSize="10pt"
+                android:fontFamily="@font/nanumsquare_light"/>
 
             <TextView
                 android:id="@+id/state"
@@ -180,7 +194,8 @@
                 android:gravity="right"
                 android:padding="10dp"
                 android:text="state"
-                android:textSize="10pt"/>
+                android:textSize="10pt"
+                android:fontFamily="@font/nanumsquare_light"/>
         </LinearLayout>
 
         <ListView
