--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -20,7 +20,8 @@
                 android:text="back"
                 android:textColor="@android:color/white"
                 android:textSize="15pt"
-                android:background="@color/bg"/>
+                android:background="@color/bg"
+                android:fontFamily="@font/nanumsquare_light"/>
 
             <Button
                 android:layout_width="wrap_content"
@@ -29,7 +30,8 @@
                 android:background="@color/bg"
                 android:text="^_^"
                 android:textColor="@android:color/white"
-                android:textSize="15pt" />
+                android:textSize="15pt"
+                android:fontFamily="@font/nanumsquare_light"/>
         </RelativeLayout>
 
 
@@ -47,7 +49,8 @@
                 android:textStyle="bold"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp" />
+                android:layout_marginLeft="20dp"
+                android:fontFamily="@font/nanumsquare_light"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -58,7 +61,8 @@
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:layout_margin="5dp"/>
+                android:layout_margin="5dp"
+                android:fontFamily="@font/nanumsquare_light"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -78,7 +82,8 @@
             android:textColor="@android:color/black"
             android:textStyle="bold"
             android:gravity="center"
-            android:layout_marginTop="40dp"/>
+            android:layout_marginTop="40dp"
+            android:fontFamily="@font/nanumsquare_light"/>
     </LinearLayout>
 
     <LinearLayout
@@ -95,7 +100,8 @@
             android:textColor="@color/bg"
             android:textSize="25sp"
             android:gravity="right"
-            android:layout_marginTop="35dp"/>
+            android:layout_marginTop="35dp"
+            android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
             android:id="@+id/textView5"
@@ -105,7 +111,8 @@
             android:text="TextView"
             android:textSize="25sp"
             android:gravity="left"
-            android:layout_marginTop="35dp"/>
+            android:layout_marginTop="35dp"
+            android:fontFamily="@font/nanumsquare_light"/>
 
     </LinearLayout>
 
@@ -123,7 +130,8 @@
             android:textColor="@color/bg"
             android:textSize="25sp"
             android:gravity="right"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
             android:id="@+id/textView7"
@@ -133,7 +141,8 @@
             android:text="TextView"
             android:textSize="25sp"
             android:gravity="left"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/nanumsquare_light"/>
 
     </LinearLayout>
 
@@ -151,7 +160,8 @@
             android:textColor="@color/bg"
             android:textSize="25sp"
             android:gravity="right"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
             android:id="@+id/textView9"
@@ -161,7 +171,8 @@
             android:text="TextView"
             android:textSize="25sp"
             android:gravity="left"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/nanumsquare_light"/>
 
     </LinearLayout>
 
@@ -177,7 +188,8 @@
             android:text="로그아웃"
             android:textSize="20dp"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/nanumsquare_light">
         </Button>
     </LinearLayout>
 </LinearLayout>
