--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -26,7 +26,7 @@
                     android:text="back"
                     android:textColor="@android:color/white"
                     android:textSize="15pt"
-                    android:onClick="onClick"/>
+                    android:onClick="onClick"
                     android:fontFamily="@font/nanumsquare_light"/>
 
                 <Button
@@ -38,7 +38,7 @@
                     android:text="^_^"
                     android:textColor="@android:color/white"
                     android:textSize="15pt"
-                    android:onClick="onClick"/>
+                    android:onClick="onClick"
                     android:fontFamily="@font/nanumsquare_light"/>
 
             </RelativeLayout>
@@ -120,7 +120,7 @@
                 android:fontFamily="@font/nanumsquare_light"/>
 
             <EditText
-                android:id="@+id/text1"
+                android:id="@+id/input1"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
                 android:background="@drawable/edit_text_border" />
@@ -144,7 +144,7 @@
                 android:textSize="20dp"
                 android:fontFamily="@font/nanumsquare_light"/>
             <EditText
-                android:id="@+id/text2"
+                android:id="@+id/input2"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
                 android:background="@drawable/edit_text_border" />
@@ -181,7 +181,7 @@
                     android:textSize="20dp"
                     android:fontFamily="@font/nanumsquare_light"/>
                 <EditText
-                    android:id="@+id/text3"
+                    android:id="@+id/input3"
                     android:layout_width="60dp"
                     android:layout_height="40dp"
                     android:background="@drawable/edit_text_border" />
@@ -200,7 +200,7 @@
                     android:textSize="20dp"
                     android:fontFamily="@font/nanumsquare_light"/>
                 <EditText
-                    android:id="@+id/text4"
+                    android:id="@+id/input4"
                     android:layout_width="60dp"
                     android:layout_height="40dp"
                     android:background="@drawable/edit_text_border" />
