--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -67,7 +67,6 @@
 
 
         <TextView
-            android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="로그인 정보"
@@ -85,7 +84,6 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
@@ -97,7 +95,7 @@
             android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/student_major"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -115,7 +113,6 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
@@ -127,7 +124,7 @@
             android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/student_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -145,7 +142,6 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
@@ -157,7 +153,7 @@
             android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/student_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
