--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -16,7 +16,8 @@
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/percentage"
             android:textSize="13pt"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
             android:id="@+id/time1"
@@ -25,7 +26,8 @@
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/percentage"
             android:layout_below="@+id/name"
-            android:textSize="10pt"/>
+            android:textSize="10pt"
+            android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
             android:id="@+id/time2"
@@ -34,7 +36,8 @@
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/percentage"
             android:layout_below="@+id/time1"
-            android:textSize="10pt"/>
+            android:textSize="10pt"
+            android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
             android:id="@+id/percentage"
@@ -43,7 +46,8 @@
             android:layout_marginLeft="10dp"
             android:gravity="center"
             android:layout_alignParentRight="true"
-            android:textSize="30dp"/>
+            android:textSize="30dp"
+            android:fontFamily="@font/nanumsquare_light"/>
 
     </RelativeLayout>
 </LinearLayout>
