UI: 수업 목록 화면 색상 추가

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -15,7 +15,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/percentage"
-            android:textSize="13pt"
+            android:padding="5dp"
+            android:textSize="10pt"
             android:textStyle="bold"
             android:fontFamily="@font/nanumsquare_light"/>
 
@@ -26,7 +27,8 @@
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/percentage"
             android:layout_below="@+id/name"
-            android:textSize="10pt"
+            android:padding="5dp"
+            android:textSize="8pt"
             android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
@@ -36,7 +38,8 @@
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/percentage"
             android:layout_below="@+id/time1"
-            android:textSize="10pt"
+            android:padding="5dp"
+            android:textSize="8pt"
             android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
@@ -47,6 +50,7 @@
             android:gravity="center"
             android:layout_alignParentRight="true"
             android:textSize="30dp"
+            android:textStyle="bold"
             android:fontFamily="@font/nanumsquare_light"/>
 
     </RelativeLayout>
