UI: 마이페이지 화면 로그아웃 인텐트 구현

--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -178,7 +178,8 @@
             android:textSize="20dp"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
-            android:fontFamily="@font/nanumsquare_light">
+            android:fontFamily="@font/nanumsquare_light"
+            android:onClick="onClick">
         </Button>
     </LinearLayout>
 </LinearLayout>
