--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,8 @@
             android:layout_height="40dp"
             android:hint="학번을 입력하세요"
             android:textSize="15sp"
+            android:inputType="number"
+            android:singleLine="true"
             android:fontFamily="@font/nanumsquare_light"/>
 
         <EditText
@@ -34,6 +36,8 @@
             android:layout_height="40dp"
             android:hint="초기 비밀번호를 입력하세요"
             android:textSize="15sp"
+            android:inputType="number"
+            android:singleLine="true"
             android:fontFamily="@font/nanumsquare_light"/>
 
         <Button
